updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Management Analyst with the City of San Antonio.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>San Antonio, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy playing with my 3 dogs, reading, writing, and watching sports.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A job that pushes me to get out of bed in the morning.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Antonio, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I need a change in my life. I want to get my creative mind going again, and I believe becoming a web developer will allow me create more for myself and my future.</p>
     </section>
 
     <footer id="footer">
